--- a/stylesheet.css
+++ b/stylesheet.css
@@ -133,3 +133,13 @@ h2 {
 span.highlight {
   background-color: #ffffd0;
 }
+
+img.hoverZoomLink {
+    transition: transform 0.3s ease-in-out; /* 设置动画效果为变换，持续时间为0.3秒 */
+    display: block;
+    margin: auto; /* 居中显示图像，视需要调整 */
+}
+
+img.hoverZoomLink:hover {
+    transform: scale(1.1); /* 图像在悬停时放大到110%的原始大小 */
+}
