--- a/stylesheet.css
+++ b/stylesheet.css
@@ -148,12 +148,13 @@ span.highlight {
     display: flex;                /* 启用Flexbox布局 */
     justify-content: center;      /* 水平居中所有图标 */
     align-items: center;          /* 垂直居中所有图标 */
+    gap: 100px;
 }
 
 .icon-links a {
     display: inline-block;        /* 确保链接是内联块级元素，允许使用边距 */
-    margin-right: 100px;           /* 在每个链接的右侧添加10px的边距 */
-    margin-bottom: 100px;
+    margin-right: 50px;           /* 在每个链接的右侧添加10px的边距 */
+    margin-bottom: 10px;
 }
 
 .icon-links a:last-child {
@@ -161,8 +162,8 @@ span.highlight {
 }
 
 .icon-links img {
-    width: 30px;                  /* 设置图标的宽度 */
-    height: 30px;                 /* 设置图标的高度 */
+    width: 40px;                  /* 设置图标的宽度 */
+    height: 40px;                 /* 设置图标的高度 */
     transition: transform 0.3s, filter 0.3s; /* 添加变换和滤镜的过渡效果 */
 }
 
