--- a/stylesheet.css
+++ b/stylesheet.css
@@ -148,13 +148,12 @@ span.highlight {
     display: flex;                /* 启用Flexbox布局 */
     justify-content: center;      /* 水平居中所有图标 */
     align-items: center;          /* 垂直居中所有图标 */
-    gap: 100px;
 }
 
 .icon-links a {
     display: inline-block;        /* 确保链接是内联块级元素，允许使用边距 */
     margin-right: 50px;           /* 在每个链接的右侧添加10px的边距 */
-    margin-bottom: 10px;
+    margin-top: 50px;
 }
 
 .icon-links a:last-child {
